--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 PORT=3000
 NODE_ENV=development
 
+# Frontend URL (for CORS - set your Vercel URL in production)
+FRONTEND_URL=https://your-project.vercel.app
+
 # File Upload Configuration
 MAX_FILE_SIZE=10485760
 UPLOAD_DIR=../uploads
